<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mn.ives.scorecleaver.SetupActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/spaaace"
        android:scaleType = "centerCrop"
        android:id="@+id/imageView" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:text="@string/start_game"
        android:id="@+id/startGame"
        android:layout_marginTop="46dp"
        android:layout_below="@+id/startScore"
        android:onClick="startGame"
        android:background="#bfeed167"
        android:textSize="30sp"
        android:layout_alignRight="@+id/imageView"
        android:layout_alignEnd="@+id/imageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/starting_score_label"
        android:id="@+id/textView"
        android:textSize="40sp"
        android:layout_marginBottom="39dp"
        android:layout_above="@+id/startScore"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:typeface="serif" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/startScore"
        android:textSize="80sp"
        android:text="@string/default_score"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:typeface="serif" />
</RelativeLayout>
