<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mn.ives.scorecleaver.DisplayScoreActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/spaaace"
        android:scaleType = "centerCrop" />

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/default_score"
        android:id="@+id/playerTwoScore"
        android:rotation="180"
        android:layout_marginTop="100dp"
        android:textSize="80sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:typeface="serif"
        android:textStyle="bold" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/injure"
        android:rotation="180"
        android:id="@+id/p2injure"
        android:layout_alignTop="@+id/playerTwoScore"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@color/red"
        android:onClick="injurePlayerTwo"
        android:textSize="60sp"
        android:textColor="@color/white" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:rotation="180"
        android:text="@string/heal"
        android:id="@+id/p2heal"
        android:layout_alignTop="@+id/p2injure"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/green"
        android:onClick="healPlayerTwo"
        android:textSize="60sp"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/default_score"
        android:id="@+id/playerOneScore"
        android:textSize="80sp"
        android:layout_marginBottom="100dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:typeface="serif"
        android:textStyle="bold" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/heal"
        android:id="@+id/p1heal"
        android:layout_alignBottom="@+id/playerOneScore"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@color/green"
        android:onClick="healPlayerOne"
        android:textSize="60sp"
        android:textColor="@color/white" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/injure"
        android:id="@+id/p1injure"
        android:layout_alignTop="@+id/p1heal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/red"
        android:onClick="injurePlayerOne"
        android:textSize="60sp"
        android:textColor="@color/white" />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:layout_gravity="right|center_vertical">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

        </LinearLayout>

    </FrameLayout>
</RelativeLayout>
